# RT-DETRv4

./: README_for_infer.md  README_for_train.md  pyproject.toml  yamls.md  yolo2coco.py
configs/dataset/: custom_detection.yml
configs/dfine/: dfine_hgnetv2_s_coco.yml
configs/rtv4/: rtv4_hgnetv2_s_coco_customed.yml
engine/rtv4/: rtv4_criterion.py
engine/solver/: det_engine.py
tools/inference/: torch_inf.py
