[project]
name = "rt-detrv4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "calflops>=0.3.2",
    "faster-coco-eval>=1.6.5",
    "fiftyone>=1.10.0",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.12.0.88",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "tensorboard>=2.20.0",
    "tensorrt>=10.14.1.48.post1",
    "termcolor>=3.2.0",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]
